Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   public/css/player.css
	modified:   src/Controller/ApiController.php
	modified:   src/Controller/GameController.php
	modified:   src/Controller/RosterController.php
	modified:   src/Form/PlayerRosterType.php
	modified:   templates/game/index.html.twig
	modified:   templates/home/index.html.twig
	modified:   templates/player/playerDetails.html.twig
	modified:   templates/team/teamDetails.html.twig

--- a/public/css/player.css
+++ b/public/css/player.css
@@ -1,15 +1,7 @@
 /********************************************** PLAYER'S DETAILS ******************************************************/
-.playerNationalitySentence{
+.playerSentence{
     display: flex;
     width: 100%;
-}
-
-.playerNationalitySentence a{
-    margin-left: 5px;
-}
-
-.playerNationalitySentence a:first-child figcaption{
-    margin-right: 5px;
 }
 
 .playerNationality{
