--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -42,5 +42,9 @@
 
     </div>
     
+    {% if is_granted('ROLE_TEAM') and not is_granted('ROLE_MODERATOR') and app.user.team is null %}
+        <h1>Tu dois créer ton équipe ici</h1>
+        <a href="{{ path('new_team') }}">Créez votre équipe ici</a>
+    {% endif %}
 
 {% endblock %}
