Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   config/packages/security.yaml
	modified:   public/css/style.css
	modified:   src/Controller/PlayerController.php
	modified:   src/Controller/RosterController.php
	modified:   src/Controller/TeamController.php
	modified:   src/Twig/AmountExtension.php
	modified:   templates/base.html.twig
	modified:   templates/game/gameDetails.html.twig
	modified:   templates/home/index.html.twig
	modified:   templates/team/teamDetails.html.twig

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,15 +153,19 @@ ol{
 .topUsers,
 .topTeams{
     background-color: #DBF0FA;
-    width: 13%;
-    height: 30vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    width: auto;
+    height: auto;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    padding: 10px;
+}
+
+.topUsers ol,
+.topTeams ol{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 30px;
 }
 
 /*********************************DELETE AND MODIFY BUTTONS ****************************************/
