--- a/public/css/player.css
+++ b/public/css/player.css
@@ -1,17 +1,61 @@
 /********************************************** PLAYER'S DETAILS ******************************************************/
+.playerDetailsContainer{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.mainPlayerDetails{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 70%;
+}
+
 .playerSentence{
     display: flex;
     width: 100%;
 }
 
-.playerNationality{
+.playerSentence p{
+    margin-bottom: 0;
+}
+
+.playerSentence p a{
+    text-decoration: none;
+    color: black;
+}
+
+#playerNationality{
     display: flex;
     margin: 0;
     gap: 5px;
 }
 
-.playerNationality img{
-    width: 20px;
+#playerNationality a{
+    display: flex;
+    align-items: center;
+}
+
+#playerNationality img{
+    width: 22px;
+    margin-right: 5px;
+}
+
+/**************** Social Medias  ***************************/
+#playerSocialMedia{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#playerSocialMedia ul{
+    width: 100%;
+    display: flex;
+    list-style: none;
+    font-size: 3.5rem;
+    gap: 20px;
+    padding: 0;
 }
 
 /********************************************* FORM ****************************************************/
