--- a/public/css/team.css
+++ b/public/css/team.css
@@ -42,3 +42,21 @@
     cursor: pointer;
     font-size: 2.5rem;
 }
+
+/************************************Details Team******************************************************************************/
+#teamDetailsLogo{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0;
+}
+
+#teamDetailsLogo img{
+    width: 80px;
+    margin-right: 10px;
+}
+
+#teamDetailsLogo figcaption{
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+}
