--- a/templates/team/teamDetails.html.twig
+++ b/templates/team/teamDetails.html.twig
@@ -6,9 +6,9 @@
 
     <div class="title">
 
-        {{ dump(team) }}
+        {# {{ dump(team) }} #}
 
-        <figure>
+        <figure id="teamDetailsLogo">
 
             <img src="{{ asset('upload/logo/' ~ team.logo) }}" alt="logo de {{ team }}">
             
@@ -18,6 +18,7 @@
                 <h1>{{team}}</h1>
 
             </figcaption>
+
         </figure>
 
         {# If the one who is in this page is a registred user he can set a team as is favorite or remove it #}
