Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   src/Controller/EditorController.php
	modified:   templates/editor/editorDetails.html.twig
	modified:   templates/game/gameDetails.html.twig

--- a/templates/editor/editorDetails.html.twig
+++ b/templates/editor/editorDetails.html.twig
@@ -3,7 +3,30 @@
 {% block title %}{{editor}}{% endblock %}
 
 {% block body %}
+
+    {{ dump(editor) }}
+    {{ dump(countryDetails) }}
     <h1>{{editor}}</h1>
+
+    <section id="editorContainer">
+
+        <aside class="topUsers">
+
+            {% include "topUsersList.html.twig" %}
+
+        </aside>
+
+        <article>
+            {{ editor }} est une entreprise qui conçoit des jeux vidéos. Elle a été crée le {{ editor.creationDate|date_fr('d F Y') }} et 
+        </article>
+
+        <aside class="topTeams">
+
+            {% include "topTeamsList.html.twig" %}
+
+        </aside>
+
+    </section>
         
     {# <p>Son siège sociale : <a href="{{ path('details_country', {'id': editor.country.id}) }}">{{ editor.country }}</a></p> #}
 
