--- a/public/css/player.css
+++ b/public/css/player.css
@@ -1,77 +1,78 @@
 /********************************************** PLAYER'S DETAILS ******************************************************/
-.playerDetailsContainer{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+.playerDetailsContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
-.mainPlayerDetails{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 70%;
+.mainPlayerDetails {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 70%;
 }
 
-.playerSentence{
-    display: flex;
-    width: 100%;
+.playerSentence {
+  display: flex;
+  width: 100%;
 }
 
-.playerSentence p{
-    margin-bottom: 0;
+.playerSentence p {
+  margin-bottom: 0;
 }
 
-.playerSentence p a{
-    text-decoration: none;
-    color: black;
+.playerSentence p a {
+  text-decoration: none;
+  color: black;
 }
 
-#playerNationality{
-    display: flex;
-    margin: 0;
-    gap: 5px;
+#playerNationality {
+  display: flex;
+  margin: 0;
+  gap: 5px;
 }
 
-#playerNationality a{
-    display: flex;
-    align-items: center;
+#playerNationality a {
+  display: flex;
+  align-items: flex-start;
+  padding-top: 3px;
 }
 
-#playerNationality img{
-    width: 22px;
-    margin-right: 5px;
+#playerNationality img {
+  width: 22px;
+  margin-right: 5px;
 }
 
 /**************** Social Medias  ***************************/
-#playerSocialMedia{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+#playerSocialMedia {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-#playerSocialMedia ul{
-    width: 100%;
-    display: flex;
-    list-style: none;
-    font-size: 3.5rem;
-    gap: 20px;
-    padding: 0;
+#playerSocialMedia ul {
+  width: 100%;
+  display: flex;
+  list-style: none;
+  font-size: 3.5rem;
+  gap: 20px;
+  padding: 0;
 }
 
 /********************************************* FORM ****************************************************/
-.selected{
-    display: flex;
+.selected {
+  display: flex;
 }
 
-#countryBoxes{
-    display: flex;
-    flex-wrap: wrap;
+#countryBoxes {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-#countryBoxes input{
-    margin-right: 5px;
+#countryBoxes input {
+  margin-right: 5px;
 }
 
-#countryBoxes label{
-    margin-right: 20px;
+#countryBoxes label {
+  margin-right: 20px;
 }
