Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   src/Controller/ApiController.php
	modified:   src/Controller/ModerationController.php
	new file:   src/Form/EncounterResultType.php
	new file:   src/Form/EncounterType.php
	new file:   src/Form/TournamentType.php
	modified:   templates/base.html.twig
	new file:   templates/tournament/tournamentForm.html.twig
	new file:   templates/tournament/tournamentsList.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -111,7 +111,7 @@
                                 <li><a href="{{ path('new_game') }}" class="dropdown-item">Jeu</a></li>
 
                                 {# Link to create a new country #}
-                                <li><a href="{{ path('new_country') }}" class="dropdown-item">Pays</a></li>
+                                <li><a href="{{ path('new_tournament') }}" class="dropdown-item">Tournoi</a></li>
 
                                 {# Link to create a new match #}
                                 <li><a href="{{ path('app_home') }}" class="dropdown-item">Match</a></li>
