Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	new file:   migrations/Version20231205124043.php
	new file:   migrations/Version20231205125256.php
	new file:   migrations/Version20231205130757.php
	modified:   src/Controller/ApiController.php
	modified:   src/Entity/Game.php
	modified:   src/Form/TournamentType.php
	modified:   templates/game/gameDetails.html.twig
	modified:   templates/tournament/tournamentsList.html.twig

--- a/templates/game/gameDetails.html.twig
+++ b/templates/game/gameDetails.html.twig
@@ -3,9 +3,10 @@
 {% block title %}{{game}}{% endblock %}
 
 {% block body %}
-    {{ dump(infos) }}
-    
+{{ dump(game) }}
+
     {% if infos is defined %}   
+        {{ dump(infos) }}
         <figure class="gameCover">
 
             {# link to the cover of the game the image is in the api#}
