Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   config/packages/twig.yaml
	new file:   public/css/tournament.css
	new file:   public/js/tournamentForm.js
	modified:   src/Form/TournamentType.php
	modified:   templates/base.html.twig
	modified:   templates/tournament/tournamentForm.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,6 +31,7 @@
             <link rel="stylesheet" href="{{ asset('css/country.css') }}">
             <link rel="stylesheet" href="{{ asset('css/player.css') }}">
             <link rel="stylesheet" href="{{ asset('css/home.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/tournament.css') }}">
             <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         {% endblock %}
 
@@ -201,6 +202,9 @@
             
             {# link to gameDetails js #}
             <script src="{{ asset('js/gameDetails.js') }}"></script>
+            
+            {# link to tournamentForm js #}
+            <script src="{{ asset('js/tournamentForm.js') }}"></script>
             
             {# Script for jquery #}
             <script
